anna (0.037) UNRELEASED; urgency=low

  * Alastair McKinstry
    - Port to new cdebconf helper macros.
    - Move to Standards-Version: 3.6.1.0; no changes required.
  * Jure Cuhalev
    - Updated Slovenian translation (sl.po).
  * Javier Fernandez-Sanguino
    - Updated Spanish translation (es.po).

 -- Alastair McKinstry <mckinstry@debian.org>  Fri, 10 Oct 2003 18:07:43 +0000

anna (0.036) unstable; urgency=low

  * Sebastian Ley
    - If anna loads a new retriever, exit with statuscode 10 to leave it
      unconfigured, and hence be started again. This is needed for the floppy
      install where anna has to run twice.
  * Bastian Blank
    - Port to new libdebian-installer api version 4.
    - Add support for subarchitectures.
  * Bart Cornelis
    - incorporated comments from debian-l10n-dutch review process in dutch
      translation
  * Alastair McKinstry
    - Convert Changelog to UTF-8 as per policy.
  * Petter Reinholdtsen
    - Make menu entry translatable.
  * Pierre Machard
    - Update French po-debconf translation.
  * Kenshi Muto
    - Update Japanese po (ja.po)
  * Denis Barbier
    - Add comments in templates file, which are copied into PO files,
      to tag main menu item and progress bar title.
  * Andre Luis Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Miroslav Kure
    - Initial Czech translation.
  * Bart Cornelis
    - Updated dutch translation (nl.po)

 -- Bastian Blank <waldi@debian.org>  Thu, 09 Oct 2003 14:31:02 +0200

anna (0.035) unstable; urgency=low

  * Petter Reinholdtsen
    - Added Russian debconf template translation (ru.po),
      patch from Serge Winitzki.
  * Christian Perrier
    - Updated debian/po/fr.po
  * Steinar H. Gunderson
    - Don't display udebs that have no menu item.
    - Update nb.po.
  * Jordi Mallach
    - Added Catalan (ca) translation.
  * Kenshi Muto
    - Update ja.po
  * Andre Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Bart Cornelis