@@ -7,8 +7,11 @@ anna (0.037) UNRELEASED; urgency=low
     - Updated Slovenian translation (sl.po).
   * Javier Fernandez-Sanguino
     - Updated Spanish translation (es.po).
+  * Sebastian Ley
+    - Fix the code that checks whether anna installed new retrievers. Thanks
+      Goswin Brederlow for the hint.
 
- -- Alastair McKinstry <mckinstry@debian.org>  Fri, 10 Oct 2003 18:07:43 +0000
+ -- Sebastian Ley <ley@debian.org>  Sun, 12 Oct 2003 15:48:05 +0200
 
 anna (0.036) unstable; urgency=low
 
